--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
    body {
             background-color: lightblue;
-            font-family: Arial, sans-serif;
+            font-family: Arial, sans-serif;   }
         
         h1 {
             color: red;
